# pollaris-ui

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
Qappa/: Blank.qml  CMakeLists.txt  ComponentManager.cpp  ComponentManager.hpp  Frame.qml  Panel.qml  Plugin.cpp  Plugin.hpp  Qappa.qmltypes  Qappa.qrc  UXManager.cpp  UXManager.hpp  qmldir
Qappa/Blanks/: HorizontalTwoPanel.qml  qmldir
cpp/: AbstractTable.hpp  AbstractTableInterface.cpp  AbstractTableInterface.hpp  Action.cpp  Action.hpp  Assistant.cpp  Assistant.hpp  BlockchainInterface.cpp  BlockchainInterface.hpp  BroadcastableTransaction.cpp  BroadcastableTransaction.hpp  Dnmx.hpp  Enums.hpp  EosioName.hpp  FpsTimer.hpp  KeyManager.cpp  KeyManager.hpp  MutableTransaction.cpp  MutableTransaction.hpp  SignableTransaction.cpp  SignableTransaction.hpp  Strings.cpp  Strings.hpp  TableSupport.hpp  Tables.hpp  Task.cpp  Task.hpp  TlsPskSession.cpp  TlsPskSession.hpp
cpp/Infrastructure/: reflectors.hpp  typelist.hpp
qml/: AppManager.Startup.js  AppManager.qml  AsiText.qml  AssistantDialogArea.qml  AssistantLogo.qml  AssistantWindow.qml  BigX.qml  FieldButton.qml  GroupMembersManagementUI.qml  JsUtils.js  ListHeader.qml  PollingGroupManagementUI.qml  Ribbon.qml  StartupWindow.qml  StatusRibbon.qml  TableEditController.qml  Transaction.qml  TransactionConfirmationUI.qml  TransactionManagerUI.qml  TypingAnimation.qml
